--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 </head>
 <body>
     <div id="heading">
-    <h1>Generate a random password</h1>
+    <h1> Generate a <span style="color:rgba(16, 185, 129, 1)">random password</span></h1>
+    <button><img src="assets/Icon.png"/> Generate passwords</button>
     </div>
+    
   <scrip src="index.js"></scrip>  
 </body>
 </html>
+
