--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <div id="rectangle4"></div>
 </div>
  
-<script src="/index.js"></script>
+
+<script src="/index.js" type="text/javascript"></script>
 </body>
 </html>
 
